new signsgd preprint

--- a/static/publications.bib
+++ b/static/publications.bib
@@ -1,3 +1,13 @@
+@misc{xiao2024exactriskcurvessignsgd,
+      title={Exact Risk Curves of signSGD in High-Dimensions: Quantifying Preconditioning and Noise-Compression Effects}, 
+      author={Ke Liang Xiao and Noah Marshall and Atish Agarwala and Elliot Paquette},
+      year={2024},
+      eprint={2411.12135},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2411.12135}, 
+}
+
 @misc{marshall2024clipped,
       title={A Clipped Trip: the Dynamics of SGD with Gradient Clipping in High-Dimensions}, 
       author={Noah Marshall and Ke Liang Xiao and Atish Agarwala and Elliot Paquette},
